     ``svn status -q``.  (Daniel Watkins, #115990)

   * Added C implementation of  ``PatienceSequenceMatcher``, which is about
     10x faster than the Python version. This speeds up commands that
     need file diffing, such as ``bzr commit`` or ``bzr diff``.
     (Lukáš Lalinský)

   * HACKING has been extended with a large section on core developer tasks.
     (Ian Clatworthy)

  API BREAKS:

   * ``Branch.append_revision`` is removed altogether; please use 
     ``Branch.set_last_revision_info`` instead.  (Martin Pool)

   * The ``add_lines`` methods on ``VersionedFile`` implementations has changed
     its return value to include the sha1 and length of the inserted text. This
     allows the avoidance of double-sha1 calculations during commit.
     (Robert Collins)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

  TESTING:

   * Tests may now raise TestNotApplicable to indicate they shouldn't be 
     run in a particular scenario.  (Martin Pool)

   * New function multiply_tests_from_modules to give a simpler interface
     to test parameterization.  (Martin Pool, Robert Collins)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

   * NULL_REVISION is returned to indicate the null revision, not None.
     (Aaron Bentley)

   * Use UTF-8 encoded StringIO for log tests to avoid failures on
     non-ASCII committer names.  (Lukáš Lalinský)

  INTERNALS:

   * ``bzrlib.plugin.all_plugins`` has been deprecated in favour of
     ``bzrlib.plugin.plugins()`` which returns PlugIn objects that provide
     useful functionality for determining the path of a plugin, its tests, and
     its version information. (Robert Collins)

   * Add the option user_encoding to the function 'show_diff_trees()'
     in order to move the user encoding at the UI level. (Goffredo Baroncelli)
